# drf-api-permissions-postgres

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
jets/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
jets/migrations/: 0001_initial.py
military_stuff/: .env  settings.py  urls.py
